--- a/mask_detection.ui
+++ b/mask_detection.ui
@@ -6,24 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1064</width>
-    <height>786</height>
+    <width>741</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Face Mask Detection</string>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 10pt &quot;Palatino Linotype&quot;;
-background-color: rgb(182, 182, 182);</string>
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="TitleLabel">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>230</x>
       <y>0</y>
-      <width>371</width>
+      <width>281</width>
       <height>41</height>
      </rect>
     </property>
@@ -34,27 +34,14 @@ background-color: rgb(182, 182, 182);</string>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>570</y>
+      <x>330</x>
+      <y>530</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>Ready </string>
-    </property>
-   </widget>
-   <widget class="QProgressBar" name="progressBar">
-    <property name="geometry">
-     <rect>
-      <x>730</x>
-      <y>530</y>
-      <width>211</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="value">
-     <number>24</number>
     </property>
    </widget>
    <widget class="QTimeEdit" name="timeEdit">
@@ -67,13 +54,13 @@ background-color: rgb(182, 182, 182);</string>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="cameraOutput">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>80</y>
-      <width>541</width>
-      <height>471</height>
+      <x>40</x>
+      <y>50</y>
+      <width>640</width>
+      <height>480</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -83,44 +70,23 @@ background-color: rgb(182, 182, 182);</string>
      <enum>QFrame::Raised</enum>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>650</x>
-      <y>210</y>
-      <width>321</width>
-      <height>271</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::Box</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
+   <zorder>cameraOutput</zorder>
+   <zorder>TitleLabel</zorder>
+   <zorder>pushButton</zorder>
+   <zorder>timeEdit</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1064</width>
-     <height>29</height>
+     <width>741</width>
+     <height>24</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
-    </property>
-   </widget>
-   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
