--- a/mask_detection.ui
+++ b/mask_detection.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>729</width>
-    <height>605</height>
+    <height>757</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,27 +21,17 @@
    <widget class="QLabel" name="TitleLabel">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>0</y>
+      <x>235</x>
+      <y>10</y>
       <width>281</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>FACE MASK DETECTION SYSTEM - Real Time</string>
+     <string>Real Time Face Mask Notifier</string>
     </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>550</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Stop</string>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="cameraOutput">
@@ -63,9 +53,148 @@
      <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_email">
+    <property name="geometry">
+     <rect>
+      <x>492</x>
+      <y>558</y>
+      <width>78</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_password">
+    <property name="geometry">
+     <rect>
+      <x>492</x>
+      <y>616</y>
+      <width>78</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_password_2">
+    <property name="geometry">
+     <rect>
+      <x>492</x>
+      <y>675</y>
+      <width>78</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>530</y>
+      <width>240</width>
+      <height>202</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="label_email">
+         <property name="text">
+          <string>Email</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLineEdit" name="lineEdit"/>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QLabel" name="label_password">
+         <property name="text">
+          <string>Password</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QLineEdit" name="lineEdit_2">
+           <property name="echoMode">
+            <enum>QLineEdit::Password</enum>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_5">
+       <item>
+        <widget class="QLabel" name="label_notificationTimer">
+         <property name="text">
+          <string>Notification Timer (seconds)</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <widget class="QLineEdit" name="lineEdit_notificationTimer">
+           <property name="text">
+            <string>60</string>
+           </property>
+           <property name="echoMode">
+            <enum>QLineEdit::Normal</enum>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_stop">
+       <property name="text">
+        <string>Stop</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
    <zorder>cameraOutput</zorder>
    <zorder>TitleLabel</zorder>
-   <zorder>pushButton</zorder>
+   <zorder>pushButton_stop</zorder>
+   <zorder>plainTextEdit</zorder>
+   <zorder>label_email</zorder>
+   <zorder>pushButton_email</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>pushButton_password</zorder>
+   <zorder>pushButton_email</zorder>
+   <zorder>pushButton_password_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -82,7 +211,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton</sender>
+   <sender>pushButton_stop</sender>
    <signal>clicked()</signal>
    <receiver>MainWindow</receiver>
    <slot>clickedStop()</slot>
